--- a/stylesheet.css
+++ b/stylesheet.css
@@ -285,22 +285,29 @@ console 系
 */
 .pad-textzone {
   display: block;
+
 }
 #serialize_output {
   display: block;
-  height: calc(50% - 100px);
-  width: calc(100% - 6px);
+  min-height: 35vh;
+  width: 90%;
+  margin: 10px;
 }
 
 #compiler_output {
   display: block;
-  height: calc(50% - 100px);
-  width: calc(100% - 6px);
+  min-height: 25vh;
+  width: 90%;
+  margin: 10px;
 }
 
-#copy2clipboard {
-  float: left;
-}
+/*#copy2clipboard {*/
+/*  float: left;*/
+/*}*/
+/*#compile_clang {*/
+/*  float: left;*/
+/*}*/
+
 .copy_alert {
   padding: 0;
   margin: 0 0 0 10px;
@@ -431,6 +438,21 @@ console 系
   padding: 20px;
 }
 
+.popup-content {
+  top: -40px;
+  position: fixed;
+  width: 100vw;
+  height: 110vh;
+  background-color: #00FF00;
+}
+.popup-content h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  -webkit-transform: translateY(-50%) translateX(-50%);
+}
+
 #stage-info {
   display:none;
   border: solid 1px black;
@@ -490,4 +512,8 @@ table, tr, td {
 }
 td {
   padding-right: 20px;
+}
+
+.inactive {
+  display: none !important;
 }
