graphics.jsを用いた図形描画に着手 バグ発生中

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -520,3 +520,11 @@ td {
 .inactive {
   display: none !important;
 }
+
+/* グラフィックス系 */
+#graphics_container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+}
