--- a/stylesheet.css
+++ b/stylesheet.css
@@ -75,6 +75,8 @@ main {
   display: flex;
   flex-flow: column;
   border-right: solid 1px black;
+  z-index: 10;
+  background: #f4f4f4;
 }
 .pad-blockzone-in {
   overflow-y: scroll;
@@ -175,19 +177,23 @@ main {
 
 .pad-line {
   display:block;
-  background-color: #F0F0F0;
+  /* background-color: #F0F0F0; */
   margin-left: 10px;
   padding: 10px 0px 10px 0px;
 /*  border-left: solid 2px; 必要なくなった*/
-/*  min-height: 30vw;
-  min-width:1000px; */
-  width: 100%;
+  min-width: calc(100% - 10px);
+  min-height: 30vh;
   white-space: wrap;
 }
 
 #start-block, #end-block {
   width: 100px;
   border: solid 1px black;
+}
+
+#end-block {
+  position: absolute;
+  bottom: 0;
 }
 
 #no_content {
@@ -374,7 +380,7 @@ console 系
 }
 #serialize_output {
   display: block;
-  min-height: 30vh;
+  height: 25vh;
   width: 90%;
   margin: 0 10px 10px 10px;
 }
@@ -517,6 +523,7 @@ console 系
   display: block;
 /*  overflow-y: scroll;*/
   height: auto;
+  min-height: 80vh;
 }
 
 .login-wrapper {
@@ -629,7 +636,7 @@ td {
 /* グラフィックス系 */
 .pad-line {
   /* relativeにするとバグるんだよおおおおおお */
-  /* position: relative; */
+  position: relative;
   z-index: 0;
 }
 
